--- a/app/page.module.css
+++ b/app/page.module.css
@@ -36,7 +36,7 @@
   font-style: normal;
   font-weight: 400;
   position: absolute;
-  top: 87%;
+  top: 74%;
   left: 44%;
 }
 .onTopImgH3 {
@@ -47,7 +47,7 @@
   letter-spacing: 2.4px;
   text-transform: uppercase;
   position: absolute;
-  top: 85%;
+  top: 72%;
   left: 44%;
 }
 .productsSection {
@@ -109,6 +109,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: center;
 }
 .productContainer {
   width: 385px;
@@ -124,6 +125,7 @@
   padding: 20px;
   cursor: pointer;
   position: relative;
+  overflow: hidden;
 }
 
 .productName {
@@ -224,7 +226,21 @@
   justify-content: space-between;
 }
 .imgDetailsDiv {
-  width: 100px;
+  height: 700px;
+  width: 1000px;
+  display: flex;
+  position: relative;
+}
+.productImgDetails{
+  margin-left: -70px;
+}
+.productImg{
+  width: 100%; /* Asegúrate de que la imagen cubra todo el contenedor */
+  height: 100%;
+  transition: transform 0.5s ease; 
+}
+.productImg:hover{
+  transform: scale(1.2);
 }
 .productDetailsDiv {
   width: 460px;
@@ -238,7 +254,61 @@
   font-size: 16px;
   line-height: 24px;
 }
-.priceDetails{
+.priceDetails {
   font-size: 24px;
   margin-top: 30px;
+}
+.bigScreen {
+  display: inline;
+}
+.smallScreen {
+  display: none;
+}
+@media (max-width: 768px) {
+  .smallScreen {
+    display: inline;
+  }
+  .bigScreen {
+    display: none;
+  }
+  .onTopImgH1 {
+    top: 90%;
+    left: 35%;
+  }
+  .onTopImgH3 {
+    top: 88%;
+
+    left: 35%;
+  }
+  .categoriesDiv {
+    overflow-x: scroll;
+    padding: 5px;
+  }
+  .productsSection {
+    padding: 0;
+  }
+  .inspirateTitle {
+    font-size: 24px;
+  }
+  .productContainer {
+    width: 333px;
+  }
+  .productDiv {
+    width: 333px;
+    height: 267px;
+  }
+  .footerDiv {
+    flex-wrap: wrap;
+    align-items: center;
+  }
+  .footerOption {
+    margin: 10px;
+  }
+  .detailsContainer {
+    display: flex;
+    flex-direction: column;
+  }
+  .imgDetailsDiv {
+    width: 100vw;
+  }
 }
