--- a/app/page.module.css
+++ b/app/page.module.css
@@ -36,7 +36,7 @@
   font-style: normal;
   font-weight: 400;
   position: absolute;
-  bottom: 60px;
+  bottom: 50px;
 }
 .onTopImgH3 {
   color: #fff;
@@ -232,7 +232,15 @@
   display: flex;
   justify-content: center;
 }
-
+.imgDetailsDivDetails {
+  width: 800px;
+  overflow: hidden;
+  background-color: #f0efea;
+  display: flex;
+  justify-content: center;
+  height: 800px;
+  position: relative;
+}
 .productImg {
   height: 100%;
   transition: transform 0.5s ease;
@@ -282,7 +290,11 @@
   margin-right: 30px;
   margin-top: 20px;
 }
-
+.svgDivDetails{
+  margin-right: 30px;
+  margin-top: 100px;
+  height: 500px;
+}
 @media (max-width: 768px) {
   .homePageText {
     background: url("https://s3-alpha-sig.figma.com/img/8f7d/95ad/0f0f7f864fc3c4a2106607304f38508f?Expires=1715558400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=C-PNmJFzW6c7PiXGSi-lTIQx1Krx25PDi0iAAXae~212PaKbYJvlO9uUTsrZYayTCz2upFDXAV68JOmJ6AO1m1adaZl9lUFDIeEsdg1Lbsd0U6stT4XfA8vSvyCqyV2fBWc0BmF8lD0nAuLBygGspaySYSzLCY6SPoQmiSqXDr2SGbR6CvoKcC4bxh4FyKSsAFlaIASVA21SK9sLMl-Rmo21nbZra2j9iYErfCW5qat~rKjwyexyzzFe3F3fdvOxROEx56loWrc62rv~SboJ30lqdrj6vOB2WFZGS6N7Ashu45ztvjGJcH05hF2GO9u~COtNGm1e0Z6a38NrBWaNXg__")
@@ -292,9 +304,9 @@
     background-repeat: no-repeat;
     height: 600px;
   }
-  .favBtn {
+  /* .favBtn {
     padding: 10px 10px 0 0;
-  }
+  } */
 
   .category {
     min-width: 198px;
@@ -329,5 +341,27 @@
   }
   .imgDetailsDiv {
     width: 100vw;
+  }
+  .onTopImgH1 {
+    
+    top: 580px;
+  }
+  .onTopImgH3 {
+   
+    top: 560px;
+  }
+  .imgDetailsDivDetails {
+  width: 450px;
+  height: 600px;
+  }
+  .productDetailsDiv{
+    max-width: 323px;
+    margin-bottom: 50px;
+    padding-top: 20px;
+  }
+  .favBtn svg{
+    position: absolute;
+    top: 20px;
+    right: 20px;
   }
 }
